--- a/notebooks/change_point_analysis.ipynb
+++ b/notebooks/change_point_analysis.ipynb
@@ -359,6 +359,84 @@
     "    change_point_path=dashboard_data_dir / \"change_point_results.csv\"\n",
     ")\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "697be407",
+   "metadata": {},
+   "source": [
+    "# Task 2: Bayesian Change Point Analysis of Brent Oil Prices\n",
+    "\n",
+    "## 1. Historical Price Overview\n",
+    "\n",
+    "The chart of Brent Oil prices from the late 1980s through 2023 highlights long-term trends, structural shifts, and periods of extreme volatility. Prices were relatively stable for the first part of the period, fluctuating modestly, before a clear structural shift around 2005 marks the beginning of a sustained upward trend. After this point, prices experienced more dramatic swings, including a sharp spike leading up to the 2008 financial crisis, a period of high but relatively stable prices, and a sudden drop during the 2020 global pandemic. Following this drop, prices rebounded quickly, approaching previous highs before tapering slightly at the end of the series. The red dashed line on the chart represents the model’s detected change point, showing where the statistical analysis identifies a significant shift in market behavior.\n",
+    "\n",
+    "**Insight:** This visualization illustrates that the detected change point aligns with the onset of heightened market volatility and rising prices. It signals a structural shift in oil market dynamics, suggesting that the market environment after this point differs from the earlier period in terms of both risk and return patterns.\n",
+    "\n",
+    "---\n",
+    "\n",
+    "## 2. Log Returns and Data Preparation\n",
+    "\n",
+    "Because oil prices are non-stationary in levels, the analysis focuses on **daily log returns**, calculated as the natural logarithm of consecutive price ratios. This transformation stabilizes variance and makes the data suitable for modeling with a constant-variance Gaussian likelihood. Plotting the log returns reveals periods of clustered volatility and sudden shifts that are not easily observable in the raw price series.\n",
+    "\n",
+    "**Insight:** The presence of volatility clustering and abrupt changes in the log returns justifies the use of a change point model rather than a single-regime model. These patterns indicate that market behavior is not constant over time, and capturing these shifts is critical for accurate modeling and insight generation.\n",
+    "\n",
+    "---\n",
+    "\n",
+    "## 3. Bayesian Change Point Model\n",
+    "\n",
+    "The model identifies a **single structural break** in the log returns, representing the day when market behavior changed. Separate mean parameters are estimated for the periods before and after the change point, while a single volatility parameter is shared across both regimes. A deterministic switch function assigns each day’s return to either the \"before\" or \"after\" period based on the change point. Observed log returns are modeled with a normal likelihood whose mean is determined by this switch.\n",
+    "\n",
+    "Posterior inference is performed using **Markov Chain Monte Carlo (MCMC)** sampling, producing full posterior distributions for the change point, average daily returns before and after, and volatility. This approach allows the model to capture uncertainty in both the timing and magnitude of the structural break, rather than producing a single fixed estimate.\n",
+    "\n",
+    "**Insight:** By modeling the change point probabilistically, we can quantify not only the most likely timing of the shift but also the range of plausible daily returns. This provides a richer understanding of market behavior than a simple before-and-after comparison.\n",
+    "\n",
+    "---\n",
+    "\n",
+    "## 4. Model Diagnostics\n",
+    "\n",
+    "Trace plots for the parameters show dense, well-mixed paths without systematic trends, indicating that the MCMC sampler explored the parameter space thoroughly. The posterior density plots for average daily returns before and after the shift and for volatility overlap across chains, confirming convergence. The trace for the change point explores possible dates across a broad range, reflecting its discrete nature.\n",
+    "\n",
+    "**Insight:** These diagnostics provide confidence that the model has converged properly. The estimates for the change point and average daily returns are statistically reliable, meaning we can interpret the results with confidence that they reflect genuine structure in the data rather than sampling artifacts.\n",
+    "\n",
+    "---\n",
+    "\n",
+    "## 5. Posterior Distribution of the Change Point\n",
+    "\n",
+    "The histogram of the change point shows a range of plausible dates rather than a single definitive day. Two regions of higher probability appear, one earlier and one later in the dataset, separated by a lower-probability period in the middle. This pattern may indicate that the signal in the data is not extremely sharp, or that multiple shifts occurred but the model is limited to identifying only one change point.\n",
+    "\n",
+    "**Insight:** The market did not change abruptly on a single day but rather underwent a shift over a window of time. The model identifies the periods where the shift is most likely, giving stakeholders an understanding of the uncertainty around the exact timing of structural changes.\n",
+    "\n",
+    "---\n",
+    "\n",
+    "## 6. Posterior Distributions of Average Daily Returns\n",
+    "\n",
+    "The posterior distributions of average daily returns before and after the change point are almost entirely overlapping and both slightly positive. The bell-shaped distributions have similar spread, indicating that volatility is consistent across the two periods.  \n",
+    "\n",
+    "**Insight:** Although the model detects a structural break, the average daily price movement changed only slightly. This suggests that the market experienced a change in dynamics, but the day-to-day behavior of prices remained relatively stable in magnitude.\n",
+    "\n",
+    "---\n",
+    "\n",
+    "## 7. Event Association\n",
+    "\n",
+    "Although the initially provided list of events did not match the detected change point, further investigation identified a relevant occurrence on **November 16, 2004**. On this date, a U.S. Senate investigation revealed that Iraq had earned significantly more from oil sales than previously reported under the Oil-for-Food program, highlighting irregularities in oil exports and raising uncertainty about global supply.\n",
+    "\n",
+    "**Insight:** This event provides a plausible explanation for the detected structural shift. The market may have reacted to concerns about supply reliability and geopolitical risk, causing changes in trading behavior and the observed shift in price dynamics.\n",
+    "\n",
+    "---\n",
+    "\n",
+    "## 8. Impact Quantification\n",
+    "\n",
+    "Following the detected change point around **2004-11-16**, the average daily price movement shifted from **0.00065** to **0.00077**, corresponding to an approximate **0.01% change** in expected daily price movement.  \n",
+    "\n",
+    "**Insight:** Although the magnitude of the shift is small, it reflects a measurable increase in daily price changes. This indicates that the market behavior shifted subtly after the change point, consistent with heightened uncertainty or a new regime of market dynamics.\n",
+    "\n",
+    "---\n",
+    "\n",
+    "## 9. Overall Interpretation\n",
+    "\n",
+    "The analysis combines statistical modeling with historical context to provide a complete picture of Brent oil market behavior. The detected change point corresponds with a period of rising prices and increased volatility, is supported by a contemporaneous geopolitical event, and shows a subtle but measurable impact on daily price movements. Stakeholders can use these insights to understand not just when the market shifted, but also how materially the dynamics changed and the degree of uncertainty around the timing and magnitude of the shift.\n"
+   ]
   }
  ],
  "metadata": {
